--- a/estate_project/templates/downloads.html
+++ b/estate_project/templates/downloads.html
@@ -42,7 +42,7 @@
 										class="ekit-heading elementskit-section-title-wraper text_left   ekit_heading_tablet-   ekit_heading_mobile- ekit-heading__title-in-left">
 										<div class='ekit-heading__title-wrapper'>
 											<h2 class="ekit-heading--title elementskit-section-title ">
-												Lagos Estates
+												Estates
 											</h2>
 											{% comment %} <div
 												class="ekit_heading_separetor_wraper ekit_heading_elementskit-border-divider">
