--- a/estate_project/templates/footer.html
+++ b/estate_project/templates/footer.html
@@ -2,7 +2,7 @@
 <footer class="site-footer footer-large footer-light footer-wide">
 
     <!-- FOOTER BLOCKES START -->
-    <div class="footer-top" style="background-color: red; color: #fff;">
+    <div class="footer-top" style="background-color: #ED2B2A; color: #fff;">
         <div class="container-fluid">
             <div class="row">
                 <div id="recent_posts_entry-2"
@@ -135,7 +135,7 @@
                                     <form role="search" method="post">
                                         <div class="input-group">
                                             <input name="news-letter" class="form-control"
-                                                placeholder="ENTER YOUR EMAIL" type="text">
+                                                placeholder="ENTER YOUR EMAIL" type="text" >
                                                 <span class="input-group-btn">
                                                     <button type="submit" class="site-button"><i class="fa fa-paper-plane-o"></i></button>
                                                 </span>
@@ -151,12 +151,12 @@
         </div>
     </div>
     <!-- FOOTER COPYRIGHT -->
-    <div class="footer-bottom overlay-wraper">
+    <div class="footer-bottom overlay-wraper" style="background-color: black;">
         <div class="overlay-main"></div>
         <div class="container">
             <div class="clearfix">
                 <div class="sx-footer-bot-center">
-                    <span class="copyrights-text">© 2022 Zaran Real Estate. All rights reserved.</span>
+                    <span class="copyrights-text" style="color: white;">© 2022 Zaran Real Estate. All rights reserved.</span>
                 </div>
             </div>
         </div>
