--- a/estate_project/templates/index.html
+++ b/estate_project/templates/index.html
@@ -267,7 +267,7 @@
 																data-frame_hover="c:#fff;bgc:#000;boc:rgba(255,255,255,0.75);bor:0px,0px,0px,0px;bos:solid;bow:0px,0px,0px,0px;e:power1.inOut;"
 																style="
                                   z-index: 9;
-                                  background-color: red;
+                                  background-color: #ED2B2A;
                                   font-family: 'Poppins';
                                 "><span>Read More</span> </a>
 														</rs-slide>
@@ -340,7 +340,7 @@
 																data-frame_hover="c:#fff;bgc:#000;boc:rgba(255,255,255,0.75);bor:0px,0px,0px,0px;bos:solid;bow:0px,0px,0px,0px;e:power1.inOut;"
 																style="
                                   z-index: 9;
-                                  background-color: red;
+                                  background-color: #ED2B2A;
                                   font-family: 'Poppins';
                                 "><span>Read More</span> </a></rs-slide>
 														<rs-slide style="position: absolute" data-key="rs-14"
@@ -411,7 +411,7 @@
 																data-frame_hover="c:#fff;bgc:#000;boc:rgba(255,255,255,0.75);bor:0px,0px,0px,0px;bos:solid;bow:0px,0px,0px,0px;e:power1.inOut;"
 																style="
                                   z-index: 9;
-                                  background-color: #d7b39a;
+                                  background-color: #ED2B2A;
                                   font-family: 'Poppins';"><span>Read More</span> </a></rs-slide>
 													</rs-slides>
 												</rs-module>
@@ -455,7 +455,7 @@
 				class="elementor-section elementor-top-section elementor-element elementor-element-463c30c elementor-section-boxed elementor-section-height-default elementor-section-height-default"
 				data-id="463c30c" data-element_type="section"
 				data-settings='{"background_background":"classic","background_image":{"url":"","id":""},"background_image_tablet":{"url":"","id":""},"background_image_mobile":{"url":"","id":""},"ekit_has_onepagescroll_dot":"yes"}'
-				style="background-color: #333333;">
+				">
 				<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-3709d58"
 						data-id="3709d58" data-element_type="column">
@@ -500,7 +500,7 @@
 														</ul>
 														<div class="text-left">
 															<a href="about-us/index.html"
-																class="site-button btn-half" style="background-color: red; color: white;"><span>Read
+																class="site-button btn-half" style="background-color: #ED2B2A;"><span style="color: white;">Read
 																	More</span></a>
 														</div>
 													</div>
@@ -541,7 +541,7 @@
 				
 				<section data-particle_enable="false" data-particle-mobile-disabled="false"
 					class="elementor-section elementor-top-section elementor-element elementor-element-990b3f5 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
-					data-id="990b3f5" data-element_type="section" data-settings='{"ekit_has_onepagescroll_dot":"yes"}' style="background-color: #333333;">
+					data-id="990b3f5" data-element_type="section" data-settings='{"ekit_has_onepagescroll_dot":"yes"}' ">
 					<div class="elementor-container elementor-column-gap-default">
 						<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-f2e52a8"
 							data-id="f2e52a8" data-element_type="column">
@@ -571,8 +571,8 @@
 																<div class="figcaption bg-white text-center p-a20">
 																	<h4 class="m-a0">{{ number_block.title }}</h4>
 																</div>
-																<div class="figcaption-number text-center sx-text-primary animate-in-to-top-content">
-																	<span>{{ forloop.counter }}</span>
+																<div class="figcaption-number text-center sx-text-primary animate-in-to-top-content" > 
+																	<span style="color: #ED2B2A";>{{ forloop.counter }}</span>
 																</div>
 															</div>
 														</div>
@@ -608,7 +608,7 @@
 				<section data-particle_enable="false" data-particle-mobile-disabled="false"
 					class="elementor-section elementor-top-section elementor-element elementor-element-fd302cb elementor-section-boxed elementor-section-height-default elementor-section-height-default"
 					data-id="fd302cb" data-element_type="section"
-					data-settings='{"background_background":"classic","background_image":{"url":"http:\/\/gridvalley.net\/wp\/inteshape\/wp-content\/uploads\/2021\/06\/cross-line2.png","id":533},"background_image_tablet":{"url":"","id":""},"background_image_mobile":{"url":"","id":""},"ekit_has_onepagescroll_dot":"yes"}' style="background-color: #333333;">
+					data-settings='{"background_background":"classic","background_image":{"url":"http:\/\/gridvalley.net\/wp\/inteshape\/wp-content\/uploads\/2021\/06\/cross-line2.png","id":533},"background_image_tablet":{"url":"","id":""},"background_image_mobile":{"url":"","id":""},"ekit_has_onepagescroll_dot":"yes"}' ">
 					<div class="elementor-container elementor-column-gap-default">
 						<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-067ff61"
 							data-id="067ff61" data-element_type="column">
@@ -669,7 +669,7 @@
 																			<div
 																				class="eael-post-elements-readmore-wrap">
 																				<a href="{{ project.url }}"
-																					class="eael-post-elements-readmore-btn">Read
+																					class="eael-post-elements-readmore-btn" style="color: #ED2B2A">Read
 																					More</a>
 																			</div>
 																		</div>
@@ -702,7 +702,7 @@
 
 				<section data-particle_enable="false" data-particle-mobile-disabled="false"
 					class="elementor-section elementor-top-section elementor-element elementor-element-de2f3a0 elementor-section-full_width elementor-section-height-default elementor-section-height-default"
-					data-id="de2f3a0" data-element_type="section" data-settings='{"ekit_has_onepagescroll_dot":"yes"}' style="background-color: #333333;">
+					data-id="de2f3a0" data-element_type="section" data-settings='{"ekit_has_onepagescroll_dot":"yes"}' ">
 					<div class="elementor-container elementor-column-gap-default">
 						<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-9733454"
 							data-id="9733454" data-element_type="column">
@@ -730,7 +730,7 @@
 														<div class="col-lg-4 col-md-6 col-sm-12 m-b30">
 															<div class="sx-icon-box-wraper icon-count-2-outer">
 																<div class="icon-count-2 bg-white">
-																	<span class="icon-count-number">01</span>
+																	<span class="icon-count-number" style="color: #ED2B2A";>01</span>
 																	<div
 																		class="icon-xl inline-icon m-b5 scale-in-center">
 																		<span class="icon-cell"><i
@@ -739,10 +739,10 @@
 																	<div class="icon-content">
 																		<h4 class="sx-tilte">Lorem ipsum</h4>
 																		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, iure!</p>
-																		<div class="text-left">
+																		<!-- <div class="text-left">
 																			<a href="services/integrity/index.html"
-																				class="site-button-link">Read More</a>
-																		</div>
+																				class="site-button-link" style="color: #ED2B2A">Read More</a>
+																		</div> -->
 																	</div>
 																</div>
 															</div>
@@ -751,7 +751,7 @@
 														<div class="col-lg-4 col-md-6 col-sm-12 m-b30">
 															<div class="sx-icon-box-wraper icon-count-2-outer">
 																<div class="icon-count-2 bg-white">
-																	<span class="icon-count-number">02</span>
+																	<span class="icon-count-number" style="color: #ED2B2A">02</span>
 																	<div
 																		class="icon-xl inline-icon m-b5 scale-in-center">
 																		<span class="icon-cell"><i
@@ -760,10 +760,10 @@
 																	<div class="icon-content">
 																		<h4 class="sx-tilte">Lorem ipsum</h4>
 																		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, culpa.</p>
-																		<div class="text-left">
+																		<!-- <div class="text-left">
 																			<a href="services/partnership/index.html"
-																				class="site-button-link">Read More</a>
-																		</div>
+																				class="site-button-link" style="color: #ED2B2A">Read More</a>
+																		</div> -->
 																	</div>
 																</div>
 															</div>
@@ -772,7 +772,7 @@
 														<div class="col-lg-4 col-md-6 col-sm-12 m-b30">
 															<div class="sx-icon-box-wraper icon-count-2-outer">
 																<div class="icon-count-2 bg-white">
-																	<span class="icon-count-number">03</span>
+																	<span class="icon-count-number" style="color: #ED2B2A">03</span>
 																	<div
 																		class="icon-xl inline-icon m-b5 scale-in-center">
 																		<span class="icon-cell"><i
@@ -781,10 +781,10 @@
 																	<div class="icon-content">
 																		<h4 class="sx-tilte">Lorem Ipsum</h4>
 																		<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, odio.</p>
-																		<div class="text-left">
+																		<!-- <div class="text-left">
 																			<a href="services/excellence/index.html"
-																				class="site-button-link">Read More</a>
-																		</div>
+																				class="site-button-link" style="color: #ED2B2A">Read More</a>
+																		</div> -->
 																	</div>
 																</div>
 															</div>
@@ -806,7 +806,7 @@
 
 				<section data-particle_enable="false" data-particle-mobile-disabled="false"
 					class="elementor-section elementor-top-section elementor-element elementor-element-e2bfd76 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
-					data-id="e2bfd76" data-element_type="section" data-settings='{"ekit_has_onepagescroll_dot":"yes"}' style="background-color: #333333;">
+					data-id="e2bfd76" data-element_type="section" data-settings='{"ekit_has_onepagescroll_dot":"yes"}' ">
 					<div class="elementor-container elementor-column-gap-default">
 						<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-7b3f07f"
 							data-id="7b3f07f" data-element_type="column">
@@ -824,7 +824,7 @@
 				</section>
 				
 
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-d3cc353 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="d3cc353" data-element_type="section" data-settings='{"ekit_has_onepagescroll_dot":"yes"}' style="background-color: #333333;">
+				<section class="elementor-section elementor-top-section elementor-element elementor-element-d3cc353 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="d3cc353" data-element_type="section" data-settings='{"ekit_has_onepagescroll_dot":"yes"}' ">
 					<div class="elementor-container elementor-column-gap-default">
 						{% for video_blog in video_blogs %}
 						<div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-{{ forloop.counter }}" data-id="{{ forloop.counter }}" data-element_type="column">
@@ -846,7 +846,7 @@
 
 				<section data-particle_enable="false" data-particle-mobile-disabled="false"
 					class="elementor-section elementor-top-section elementor-element elementor-element-29c19e0 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
-					data-id="29c19e0" data-element_type="section" data-settings='{"ekit_has_onepagescroll_dot":"yes"}' style="background-color: #333333;">
+					data-id="29c19e0" data-element_type="section" data-settings='{"ekit_has_onepagescroll_dot":"yes"}' ">
 					<div class="elementor-container elementor-column-gap-default">
 						<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-554089c"
 							data-id="554089c" data-element_type="column">
@@ -875,7 +875,7 @@
 				<section data-particle_enable="false" data-particle-mobile-disabled="false"
 					class="elementor-section elementor-top-section elementor-element elementor-element-8b08a4f elementor-section-full_width elementor-section-height-default elementor-section-height-default"
 					data-id="8b08a4f" data-element_type="section"
-					data-settings='{"background_background":"classic","background_image":{"url":"","id":""},"background_image_tablet":{"url":"","id":""},"background_image_mobile":{"url":"","id":""},"ekit_has_onepagescroll_dot":"yes"}' style="background-color: #333333;">
+					data-settings='{"background_background":"classic","background_image":{"url":"","id":""},"background_image_tablet":{"url":"","id":""},"background_image_mobile":{"url":"","id":""},"ekit_has_onepagescroll_dot":"yes"}' ">
 					<div class="elementor-container elementor-column-gap-default">
 						<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-810e88d"
 							data-id="810e88d" data-element_type="column">
@@ -933,8 +933,10 @@
 																				</p>
 																			</div>
 																			<div class="clearfix">
-																				<div class="sx-post-readmore pull-left">
-																					<a href="alara-of-ilara/index.html" title="Read More" rel="bookmark" class="site-button-link">Read More</a>
+																				<div class="text-left">
+																					<a href="about-us/index.html"
+																						class="site-button btn-half" style="background-color: #ED2B2A; color: white;"><span style="color: white;">Read
+																							More</span></a>
 																				</div>
 																				<div class="widget_social_inks pull-right">
 																					<ul class="social-icons social-md social-square social-dark m-b0">
