--- a/estate_project/templates/our-projects.html
+++ b/estate_project/templates/our-projects.html
@@ -9,7 +9,7 @@
 				<div class="banner-title-outer">
 					<div class="banner-title-name">
 						<h2 class="m-tb0">Projects</h2>
-						<p>Ace Real Estate is an award winning and value driven real estate development company with a
+						<p>Zaran Real Estate is an award winning and value driven real estate development company with a
 							tripartite value system that cut across service delivery, and customer satisfaction.</p>
 					</div>
 				</div>
