--- a/estate_project/templates/schedule-inspection.html
+++ b/estate_project/templates/schedule-inspection.html
@@ -24,8 +24,8 @@
 											data-id="73630c02" data-element_type="widget"
 											data-settings="{&quot;ekit_we_effect_on&quot;:&quot;none&quot;}"
 											data-widget_type="heading.default">
-											<div class="elementor-widget-container">
-												<h2 class="elementor-heading-title elementor-size-default">Schedule an
+											<div class="elementor-widget-container" style="display: flex; justify-content: center;">
+												<h2 class="elementor-heading-title elementor-size-default" style="color: #ED2B2A;">Schedule an
 													Inspection</h2>
 											</div>
 										</div>
@@ -45,100 +45,86 @@
 											data-settings="{&quot;ekit_we_effect_on&quot;:&quot;none&quot;}"
 											data-widget_type="eael-fluentform.default">
 											<div class="elementor-widget-container">
-												<div
-													class="eael-contact-form eael-fluent-form-wrapper clearfix eael-contact-form-align-default">
+												<div class="eael-contact-form eael-fluent-form-wrapper clearfix eael-contact-form-align-default">
 
 
-													<div class='fluentform fluentform_wrapper_1'>
-														<form data-form_id="1" id="fluentform_1"
-															class="frm-fluent-form fluent_form_1 ff-el-form-top ff_form_instance_1_1 ff-form-loading"
-															data-form_instance="ff_form_instance_1_1" method="POST">
-															<input type='hidden' name='__fluent_form_embded_post_id'
-																value='596' /><input type="hidden"
-																id="_fluentform_1_fluentformnonce"
-																name="_fluentform_1_fluentformnonce"
-																value="902f23a7db" /><input type="hidden"
-																name="_wp_http_referer" value="/schedule-inspection/" />
-															<div data-type="name-element" data-name="names"
-																class=" ff-field_container ff-name-field-wrapper">
-																<div class='ff-t-container'>
-																	<div class='ff-t-cell '>
-																		<div class='ff-el-group'>
-																			<div
-																				class='ff-el-input--label asterisk-right'>
-																				<label
-																					for='ff_1_names_first_name_'>First
-																					Name</label> </div>
-																			<div class='ff-el-input--content'><input
-																					type="text" name="names[first_name]"
-																					id="ff_1_names_first_name_"
-																					class="ff-el-form-control"
-																					placeholder="First Name"></div>
-																		</div>
+													<div class='fluentform fluentform_wrapper_1' style="display: flex; justify-content: center;">
+														
+
+														<form data-form_id="1" id="fluentform_1" class="frm-fluent-form fluent_form_1 ff-el-form-top ff_form_instance_1_1 ff-form-loading" data-form_instance="ff_form_instance_1_1" method="POST" style="display: inline-block; background-color: #ffffff; border-radius: 10px; box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15); padding: 20px;">
+
+															<input type='hidden' name='__fluent_form_embded_post_id' value='596' />
+															<input type="hidden" id="_fluentform_1_fluentformnonce" name="_fluentform_1_fluentformnonce" value="902f23a7db" />
+															<input type="hidden" name="_wp_http_referer" value="/schedule-inspection/" />
+														  
+															<div data-type="name-element" data-name="names" class="ff-field_container ff-name-field-wrapper">
+															  <div class='ff-t-container'>
+																<div class='ff-t-cell'>
+																  <div class='ff-el-group'>
+																	<div class='ff-el-input--label asterisk-right'>
+																	  <label for='ff_1_names_first_name_'>First Name</label>
 																	</div>
-																	<div class='ff-t-cell '>
-																		<div class='ff-el-group'>
-																			<div
-																				class='ff-el-input--label asterisk-right'>
-																				<label for='ff_1_names_last_name_'>Last
-																					Name</label> </div>
-																			<div class='ff-el-input--content'><input
-																					type="text" name="names[last_name]"
-																					id="ff_1_names_last_name_"
-																					class="ff-el-form-control"
-																					placeholder="Last Name"></div>
-																		</div>
+																	<div class='ff-el-input--content'>
+																	  <input type="text" name="names[first_name]" id="ff_1_names_first_name_" class="ff-el-form-control" placeholder="First Name">
 																	</div>
+																  </div>
 																</div>
-															</div>
-															<div class='ff-el-group'>
-																<div
-																	class='ff-el-input--label ff-el-is-required asterisk-right'>
-																	<label for='ff_1_numeric-field'>Phone No</label>
+																<div class='ff-t-cell'>
+																  <div class='ff-el-group'>
+																	<div class='ff-el-input--label asterisk-right'>
+																	  <label for='ff_1_names_last_name_'>Last Name</label>
+																	</div>
+																	<div class='ff-el-input--content'>
+																	  <input type="text" name="names[last_name]" id="ff_1_names_last_name_" class="ff-el-form-control" placeholder="Last Name">
+																	</div>
+																  </div>
 																</div>
-																<div class='ff-el-input--content'><input type="number"
-																		name="numeric-field" id="ff_1_numeric-field"
-																		class="ff-el-form-control"
-																		data-name="numeric-field" inputmode="numeric"
-																		step="any"></div>
+															  </div>
 															</div>
+														  
 															<div class='ff-el-group'>
-																<div
-																	class='ff-el-input--label ff-el-is-required asterisk-right'>
-																	<label for='ff_1_email'>Email</label> </div>
-																<div class='ff-el-input--content'><input type="email"
-																		name="email" id="ff_1_email"
-																		class="ff-el-form-control"
-																		placeholder="Email Address" data-name="email">
-																</div>
+															  <div class='ff-el-input--label ff-el-is-required asterisk-right'>
+																<label for='ff_1_numeric-field'>Phone No</label>
+															  </div>
+															  <div class='ff-el-input--content'>
+																<input type="number" name="numeric-field" id="ff_1_numeric-field" class="ff-el-form-control" data-name="numeric-field" inputmode="numeric" step="any">
+															  </div>
 															</div>
+														  
 															<div class='ff-el-group'>
-																<div
-																	class='ff-el-input--label ff-el-is-required asterisk-right'>
-																	<label for='ff_1_datetime'>Date / Time of
-																		Inspection</label> </div>
-																<div class='ff-el-input--content'><input
-																		data-type-datepicker data-format='d/m/Y'
-																		type="text" name="datetime" id="ff_1_datetime"
-																		class="ff-el-form-control ff-el-datepicker"
-																		data-name="datetime"></div>
+															  <div class='ff-el-input--label ff-el-is-required asterisk-right'>
+																<label for='ff_1_email'>Email</label>
+															  </div>
+															  <div class='ff-el-input--content'>
+																<input type="email" name="email" id="ff_1_email" class="ff-el-form-control" placeholder="Email Address" data-name="email">
+															  </div>
 															</div>
+														  
 															<div class='ff-el-group'>
-																<div
-																	class='ff-el-input--label ff-el-is-required asterisk-right'>
-																	<label for='ff_1_message'>Your Message</label>
-																</div>
-																<div class='ff-el-input--content'><textarea
-																		name="message" id="ff_1_message"
-																		class="ff-el-form-control"
-																		placeholder="Your Message" rows="4" cols="2"
-																		data-name="message"></textarea></div>
+															  <div class='ff-el-input--label ff-el-is-required asterisk-right'>
+																<label for='ff_1_datetime'>Date / Time of Inspection</label>
+															  </div>
+															  <div class='ff-el-input--content'>
+																<input data-type-datepicker data-format='d/m/Y' type="text" name="datetime" id="ff_1_datetime" class="ff-el-form-control ff-el-datepicker" data-name="datetime">
+															  </div>
 															</div>
-															<div class='ff-el-group ff-text-left ff_submit_btn_wrapper'>
-																<button type="submit"
-																	class="ff-btn ff-btn-submit ff-btn-md ff_btn_style">Submit
-																	Form</button></div>
-														</form>
+														  
+															<div class='ff-el-group'>
+															  <div class='ff-el-input--label ff-el-is-required asterisk-right'>
+																<label for='ff_1_message'>Your Message</label>
+															  </div>
+															  <div class='ff-el-input--content'>
+																<textarea name="message" id="ff_1_message" class="ff-el-form-control" placeholder="Your Message" rows="4" cols="2" data-name="message"></textarea>
+															  </div>
+															</div>
+														  
+															<div class='ff-el-group ff-text-left ff_submit_btn_wrapper' >
+															  <button type="submit" class="ff-btn ff-btn-submit ff-btn-md ff_btn_style" style="background-color: #ED2B2A; color: #ffffff;">Submit Form</button>
+															</div>
+														  
+														  </form>
+														  
+
 														<div id='fluentform_1_errors'
 															class='ff-errors-in-stack ff_form_instance_1_1 ff-form-loading_errors ff_form_instance_1_1_errors'>
 														</div>
